2006-07-24  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #17127]
	* Makeconf (clean): Don't remove `*.*_d' files.
	(%.sdefsi): Add `%.sdefs.d' to the target list.  Create these files by
	specifying `-MD' as a flag for CPP and mangle the output as needed.
	Include these `*.sdefs.d' files instead of `*.migs_d' and `*.migsh_d'
	files.
	(%.udefsi): Likewise for `%.udefs.d' / `*.migu_d' and `*.miguh_d'.
	(%.migs_d, %.migu_d, %.migsh_d, %.miguh_d): Remove targets.

2006-03-21  Leonardo Lopes Pereira  <leonardolopespereira@gmail.com>

	[patch #4984]
	* Makeconf (mach_defs_names): Remove `mach_norma' and `norma_task'.

2006-01-26  Thomas Schwinge  <tschwinge@gnu.org>

	* config.guess: Updated from the canonical source.
	* config.sub: Likewise.

2005-04-07  Alfred M. Szmidt  <ams@gnu.org>

	* configure.in: Error out if MiG couldn't be found.
	* configure: Regenerated.

2004-09-29  Alfred M. Szmidt  <ams@kemisten.nu>

	* config.make.in (datadir): New variable.

2004-09-10  Roland McGrath  <roland@frob.com>

	* Makefile (lib-subdirs): Remove bogon in last checkin.

2004-09-09  Roland McGrath  <roland@frob.com>

	* Makefile (prog-subdirs): Remove serverboot.

2004-03-14  Marcus Brinkmann  <marcus@gnu.org>

	* README.CVS: New file.

2004-01-26  Jeff Bailey  <jbailey@nisa.net>

	* config.make.in (hurddir): Use ${exec_prefix} instead of
	$(exec_prefix)
	(bootdir): Likewise
	(libdir): Get definition from autoconf
	(bindir): Likewise
	(sbindir): Likewise
	(includedir): Likewise
	(libexecdir): Likewise
	(infodir): Likewise
	(sysconfdir): Likewise
	(localstatedir): Likewise
	(sharedstatedir): Likewise

2003-11-05  Jeff Bailey  <jbailey@nisa.net>

	* config.sub: Update.
	* config.guess: Update.

2003-10-09  Alfred M. Szmidt  <ams@kemisten.nu>

        * Makeconf (TAGS): Add a space between the function `strip' and
	its argument.

2003-02-15  Roland McGrath  <roland@frob.com>

	* configure: New generated file, now in the repository.

2002-10-23  Jeff Bailey  <jbailey@gnu.org>
