@@ -1,238 +1,0 @@
-2006-12-03  Thomas Schwinge  <tschwinge@gnu.org>
-
-	[bug #17121 --- ``GNU Hurd debian dir'']
-	* debian/Makefile: Remove file.
-	* debian/README.Debian: Likewise.
-	* debian/TODO: Likewise.
-	* debian/changelog: Likewise.
-	* debian/conffiles: Likewise.
-	* debian/control: Likewise.
-	* debian/copyright: Likewise.
-	* debian/postinst: Likewise.
-	* debian/prerm: Likewise.
-	* debian/rc: Likewise.
-	* debian/rules: Likewise.
-	* debian/servers.boot: Likewise.
-	* debian/shlibs: Likewise.
-	* debian/shlibs.local: Likewise.
-	* debian/update-rc.d: Likewise.
-
-2002-11-18  Marcus Brinkmann  <marcus@gnu.org>
-
-	* control (Uploader): Add Neal.
-	* shlibs: Add pthreads.
-	* rules: Add debian/tmp/lib/hurd/console/* to search path for
-	shared objects.
-	* changelog: Add Neal's last release and my upcoming.
-
-2002-09-29  Marcus Brinkmann  <marcus@gnu.org>
-
-	* control (Build-Depends): Add libncursesw5-dev.
-	* changelog: Add a note about this here.
-
-2002-09-17  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update for new Debian package.
-
-2002-08-04  Marcus Brinkmann  <marcus@gnu.org>
-
-	* control (Uploaders): New field, suggested by Jeff Bailey.
-	(Build-Depends): Add version requirement for mig.
-	* shlibs: Update version to 0.3, add version restriction.
-	* shlibs.local: Likewise.
-	* changelog: Update for next upload.
-
-2002-08-03  Jeff Bailey  <jbailey@gnu.org>
-
-	* rules: Symlinks should point to relative location, not absolute.
-
-2002-05-23  Marcus Brinkmann  <marcus@gnu.org>
-
-	* control (Provides, Replaces, Conflicts): Add fakeroot.
-	* changelog: Update for Debian package.
-
-2002-05-13  Marcus Brinkmann  <marcus@gnu.org>
-
-	* rules (INFODIR): Move to /share.
-	* postinst: Likewise.
-	Submitted by Guillem Jover <guillem.jover@menta.net>, Closes: #146797.
-
-2002-01-28  Marcus Brinkmann  <marcus@gnu.org>
-
-	* copyright: Remove Linuxism.
-
-2001-12-29  Marcus Brinkmann  <marcus@gnu.org>
-
-	* rules (configure): Don't call aclocal.
-	* control (Build-Depends): We don't need automake.
-
-2001-12-29  Marcus Brinkmann  <marcus@gnu.org>
-
-	* control (Build-Depends): Add automake and autoconf to build
-	dependencies.  Reported by Jordi Mallach.
-
-2001-11-05  Marcus Brinkmann  <marcus@gnu.org>
-
-	* debian/changelog: Update for new Debian package.
-
-2001-10-16  Marcus Brinkmann  <marcus@gnu.org>
-
-	* debian/changelog: Update for new Debian package.
-
-2001-10-13  Marcus Brinkmann  <marcus@gnu.org>
-
-	* debian/rules: New dpkg-shlibdeps is more strict and complains
-	about statically linked files, so a new filter is necessary.
-	* debian/control: Add `file' to build dependencies.
-	By Kevin Kreamer <kkreamer@etherhogz.org>.
-
-	* debian/changelog: Update for new release.
-
-2001-10-01  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to current version.
-	* update-rc.d: New file moved from dpkg to here.
-	* rules: Install update-rc.d.
-
-2001-08-17  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to current version.
-
-2001-07-18  Marcus Brinkmann  <marcus@gnu.org>
-
-	* copyright: Refer to new directory.
-	* rules: Move documentation to share directory.
-	Add -isp to dpkg-gencontrol invocation.
-	Remove crufty hurd.info.
-	* control: Bump up standards version.
-
-2001-07-18  Marcus Brinkmann  <marcus@gnu.org>
-
-	* rc: Do not excempt random-seed when cleaning up /var/run.  State
-	data should be in /var/lib (FHS) or /var/state.
-	* changelog: Update to current version.
-	* debian/servers.boot: Add die $(serverboot).
-
-2001-06-17  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to current version.
-
-2001-06-15  Marcus Brinkmann  <marcus@gnu.org>
-
-	* rc: Merge in recent changes from daemons/rc.sh.
-
-2001-06-15  Marcus Brinkmann  <marcus@gnu.org>
-
-	* rc: Be more selective with what to clean from /var/run.
-	Patch by Moritz Schulte <moritz@chaosdorf.de>.
-
-2001-04-29  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to reflect Debian upgrades.
-
-2001-01-09  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to reflect Debian upgrade.
-
-	* rules: Use --disable-profile wih configure instead no_prof=t
-	with make.
-
-2000-11-27  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to reflect Debian upgrade.
-	* rc: New file.
-	* rules: Install rc.
-	* control: Add Build-Depends.
-
-2000-07-04  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to reflect Debian uploads.
-	* rules: Use install_script to install scripts.
-	Don't check for shared libraries in scripts.
-
-2000-01-30  Marcus Brinkmann  <marcus@gnu.org>
-
-	* changelog: Update to reflect Debian uploads.
-
-1999-10-09  Marcus Brinkmann  <marcus@gnu.org>
-
-	* rules (BUILDARCH): Renamed to DEB_BUILD_GNU_TYPE.
-	(HOSTARCH): Renamed to DEB_HOST_GNU_TYPE.
-	(INFODIR): New variable.
-	(STAMPS_TO_CLEAN): Add stamp-config.
-	(configure): Depend on configure.in.
-	(config, stamp-config): New targets.
-	(stamp-build): Build info documentation.
-	(clean): Do not clean up build directory, it will be removed.
-	Clean documentation directory.
-	(binary-arch): Remove etc/motd.
-	Expand bash {,} syntax.
-	Gzip serverboot.
-	Install additional documentation formats.
-	Rename libexec/runsystem to libexec/runsystem.gnu.
-	Install postinst, prerm
-	(.PHONY): Add config.
-	
-	* postinst, prerm: New Files.
-	* shlibs,shlibs.local: Remove libmom.
-	* changelog: Update to reflect Debian uploads.
-
-1999-06-01  Marcus Brinkmann <brinkmd@debian.org>
-
-	* TODO: Remove entry about shared library dependencies (see below).
-	Remove entry about suid-manager. We don't need to register binaries
-	which must be suid to operate.
-
-	* shlibs: New file. This makes Debian packages which use Hurd
-	libraries dependant on the Hurd package.
-	* rules: Add shlibs to the Hurd package.
-
-	* changelog: Update to reflect the Debian releases done.
-
-	* servers.boot: Remove obsolete $(default-pager) tag.
-
-	* control: Add Replaces, Conflicts login, as done with makedev.
-
-	* shlibs.local: New file. This is a work around needed for cross
-	compilation, so dpkg-shlibdeps does not make the Hurd package
-	dependant on itself.
-
-1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>
-
-	* rules (binary-arch): Don't remove root and etc dirs.
-
-	* conffiles: Add /etc/ttys.
-
-1999-04-28  Roland McGrath  <roland@baalperazim.frob.com>
-
-	* rules (binary-arch): Add etc, etc/login subdirs to chmod cmd.
-	Use $(addprefix) fn to avoid repetition.
-
-	* conffiles: Add /etc/login files .bash_login, .bashrc, .hushlogin,
-	.profile and README.
-
-Wed Apr 28 02:44:13 1999  Thomas Bushnell, BSG  <tb@mit.edu>
-
-	* TODO: New item.
-	All of these because Marcus says so.
-
-1999-04-25  Roland McGrath  <roland@baalperazim.frob.com>
-
-	* control (Depends): Change shlibs to hurd cause Marcus says so.
-
-1999-04-18  Roland McGrath  <roland@baalperazim.frob.com>
-
-	* rules (binary-arch): Fix $ -> $$ and \\ -> \.
-	From Marcus Brinkmann.
-
-1999-04-15  Roland McGrath  <roland@baalperazim.frob.com>
-
-	* control (Provides): Add login.
-	(Replaces, Conflicts): New frobs, listing makedev.
-
-1999-03-17  Gordon Matzigkeit  <gord@trick.fig.org>
-
-	* servers.boot: Clarify the default-pager description, and
-          add a default `$(default-pager)' line.
-
-	* Makefile: New file.
